# Trading-Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/core/: auth.py  config.py  database.py  dependencies.py  lifespan.py  logging.py  security.py
backend/app/domain/: bot_manager.py  constants.py  exceptions.py  order_handler.py  trailing_tp.py  value_objects.py
backend/app/domain/base/: repositories.py
backend/app/domain/bot_config/: repositories.py
backend/app/domain/services/: __init__.py  balance_validator.py  bot_recovery.py  cycle_updater.py  dust_manager.py  fee_calculator.py  order_placer.py  tp_calculator.py
backend/app/domain/user/: repositories.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_12_26-7f6337e7d521_create_tables.py  2025_12_28-5119af54a31f_remove_user_foreign_key.py  2025_12_28-5d1be60109b9_add_active_to_orderstatus_enum.py  2025_12_28-dddfa1998799_add_current_tp_order_id_to_dca_cycle.py  2025_12_28-eaab20cb6495_add_profit_usdt_to_cycle.py  2025_12_28-fa0666849e2c_add_initial_first_order_price_to_cycle.py  2025_12_31-413cb054d8e5_created_at.py  2026_01_01-a52a2f689402_dust.py  2026_01_06-3ce37d37cd09_trailing_profit.py  2026_01_06-e12882e2d3d8_trailing_profit_config.py  2026_01_07-25dfa479400a_trailing_profit_price.py  (+4 more)
backend/app/presentation/: api.py
backend/app/shared/: exchange_helper.py  utils.py  websocket.py  websocket_registry.py
frontend/: README.md  (+4 more)
(+31 files in other folders)
