[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.16.5",
    "asyncpg==0.30.0",
    "ccxt==4.5.29",
    "fastapi==0.127.0",
    "greenlet==3.2.4",
    "pre-commit==4.5.1",
    "psycopg2-binary==2.9.11",
    "pydantic[email]==2.11.7",
    "pydantic-settings==2.12.0",
    "python-jose==3.5.0",
    "redis==7.1.0",
    "sqlalchemy==2.0.45",
    "uvicorn==0.35.0",
    "bcrypt==4.1.2",
]
